Task5/non-admin-api-allow.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-front-to-backend-api
spec:
  podSelector:
    matchLabels:
      role: back-end-api
  policyTypes:
    - Ingress
    - Egress

  ingress:
    - from:
        - podSelector:
            matchLabels:
              role: front-end
      ports:
        - protocol: TCP
          port: 80

  egress:
    - to:
        - podSelector:
            matchLabels:
              role: front-end
      ports:
        - protocol: TCP
          port: 80
